# taiko-rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
.codex/: config.toml
.github/: pull_request_template.md
crates/taiko_cli/: Cargo.toml
crates/taiko_cli/src/: lib.rs
docs/: 00_project_goal.md  00_project_objective.md  01_preparation_workplan.md  02_document_index.md  02_documentation_language_policy.md  03_definition_of_ready.md  04_loop_operational_maturity_model.md  05_autonomy_scorecard.md  06_gate_transition_rules.md  07_failure_feedback_protocol.md  10_opentaiko_research_plan.md  11_opentaiko_feature_taxonomy.md  12_opentaiko_phase1_research_questions.md  20_phase1_scope.md  21_phase1_non_scope.md  22_phase1_acceptance_criteria.md  23_phase1_definition_of_done.md  24_phase1_normal_play_compatibility_contract.md  25_phase1_feature_classification.md  26_phase1_user_selected_song_validation.md  27_phase1_open_taiko_compatibility_boundary.md  30_rust_architecture_overview.md  31_module_boundaries.md  32_data_model.md  33_runtime_loop.md  34_error_handling_and_logging.md  40_loop_cli_contract.md  40_timing_model.md  41_audio_sync_model.md  42_judgement_model.md  43_timing_log_schema.md  44_timing_log_analyzer_spec.md  45_fixture_validation_contract.md  46_headless_autoplay_contract.md  47_timing_log_analyzer_contract.md  48_failure_feedback_loop_contract.md  49_qa_regression_gate_contract.md  50_test_harness_overview.md  51_fixture_design.md  52_golden_update_policy.md  (+33 more)
(+307 files in other folders)
